--- a/languages/dk_speakup.pot
+++ b/languages/dk_speakup.pot
@@ -386,7 +386,9 @@ msgstr ""
 #: includes/emailpetition.php:176 includes/emailpetition.php:205
 #: includes/widget.php:161 includes/widget.php:178 includes/widget.php:187
 msgid "signature"
-msgstr ""
+msgid_plural "signatures"
+msgstr[0] ""
+msgstr[1] ""
 
 #: includes/emailpetition.php:195 includes/widget.php:207
 msgid "Signature goal"
